# hellogl

./: .gitignore  CMakeLists.txt  LICENSE  README.md
assets/shaders/: model.frag  model.vert
asteroid/: CMakeLists.txt
asteroid/src/: main_asteroid.cpp
externallibs/: CMakeLists.txt
font_draw/: CMakeLists.txt
font_draw/src/: main.cpp  main_font_draw.cpp
font_render/: CMakeLists.txt
font_render/src/: main_font_renderer.cpp
lib/core/: app.cpp  app.h
lib/ogl/: shader.cpp  shader.h
mylibs/: CMakeLists.txt
mylibs/core/: app.cpp
mylibs/ogl/: shader.h  shaderbuffer.cpp  shaderbuffer.h
space_shooter/: CMakeLists.txt
space_shooter/src/: main_space_shooter.cpp
src/: glad.c  glad.h  main.cpp  shader.cpp
